# cosc363-alien-theme-park-2026

./: .gitignore  Alien.cpp  Animation.cpp  Animation.h  CMakeLists.txt  Global.cpp  Global.h  Model.cpp  Model.h  Utils.cpp  Utils.h
.cache/clangd/index/: Alien.cpp.79B4D24A2CD6B924.idx
resources/: bricks.tga  nightsky.tga  redsoil.tga  sun.tga  woodplanks.tga
